DDP-5811: Prion: Update medical questionnaire longitudinal tracking: Refactored and restructured to get rid of dependence on sdk classes that aren't actually exported and changed code to keep the status and related fields as complete after a new instance of the medical questionnaire is created, even if that instance is not complete.  Working on fixing an issue where certain things aren't translated when the language is changed.

--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/en.json
@@ -179,6 +179,11 @@
         "ActivityCreated": "-",
         "ActivitySummary": "Available for you to review and volunteer",
         "ActivityActions": "Review"
+      },
+      "States": {
+        "Created": "New",
+        "InProgress": "In Progress",
+        "Completed": "Complete"
       }
     },
     "LoginLanding": {
