--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -179,6 +179,11 @@
         "ActivityCreated": "-",
         "ActivitySummary": "זמין עבורכם לסקירה ולהתנדבות",
         "ActivityActions": "סקירה"
+      },
+      "States": {
+        "Created": "נוצר",
+        "InProgress": "בביצוע",
+        "Completed": "הושלם"
       }
     },
     "LoginLanding": {
