--- a/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
@@ -276,6 +276,24 @@
     },
     "Validators": {
       "DateNavyValidationRule": "Entered date is invalid"
+    },
+    "FileUpload": {
+      "ConfirmReuploadTitle": "Are you sure you want \nto reupload the file?",
+      "ConfirmUndoUploadTitle": "Are you sure you want \nto remove uploaded file from server?",
+      "ConfirmCancelUploadTitle": "Are you sure you want \nto cancel upload?",
+      "ReuploadBtnText": "Reupload",
+      "UploadBtnText": "Upload",
+      "OkBtnText": "OK",
+      "CancelBtnText": "Cancel",
+      "MaxSize": "Max size: {{maxSize}}",
+      "AllowedFileTypes": "Allowed files: {{allowedFileTypes}}",
+      "ChooseFile": "Click and select \nor drag file to upload",
+      "Uploading": "Uploading {{filename}}",
+      "Size": "(size: {{size}})",
+      "MaxSizeErrorMessage": "Maximum file size exceeded",
+      "InvalidTypeErrorMessage": "Type of file selected is not valid",
+      "CancelUpload": "Cancel upload",
+      "RemoveUploadedFile": "Remove uploaded file"
     }
   }
 }
