--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -123,48 +123,58 @@
         },
         "ScientificResearchPage": {
             "Title": "Scientific Research",
-            "Section1": {
-                "Title": "Goals",
-                "Text1": "Count Me In is a patient-partnered cancer research study open to anyone in the United States or Canada who has ever been diagnosed with cancer. The goal of Count Me In is to transform cancer care by enabling all cancer patients to accelerate biomedical research through sharing their cancer samples, clinical information, and their experiences. This partnership generates cancer datasets containing linked clinical, genomic, molecular, and patient-reported data without including any personal information. In order to accelerate the pace at which discoveries are made, Count Me In data is regularly shared with the biomedical research community through scientific repositories such as cBioPortal for Cancer Genomics and the National Cancer Institute (NCI) Genomic Data Commons.",
-                "Text2": "Everyone who signs up for Count Me In will be able to provide saliva samples as well as patient-reported data through a series of surveys on topics such as their clinical history, their experiences with cancer, and their family history of cancer. There is tremendous scientific value in studying this large, cross-cutting group of patients who represent many different cancer types, treating institutions, and ages or other demographics. The more that participants in research truly represent the full diversity of cancer patients and their experiences, the greater the impact that scientific discoveries can have for everyone.",
-                "Text3": "Additional biological samples, such as tumor samples, blood samples, and still samples, will be obtained from specific patient cohorts and used to generate genomic and molecular data for analysis. This resulting data will be linked to the genomic data from saliva samples, the clinical information from medical records, and patient-reported information from surveys, which will be shared with the biomedical research community. By integrating all of these different and important aspects of cancer, resulting Count Me In datasets will accelerate research discoveries across many different fields.",
-                "Text4": "This approach of Count Me In enables building and deeply studying cohorts of patients not only within one cancer type, but also that cut across cancer types -- such as all patients who receive a particular therapy, such as immunotherapy; or patients within a particular age group, such as adolescents and young adults. Count Me In has built and will continue to build research initiatives around different patient populations and cohorts. As more people join, there will be more opportunities to launch deeper studies within more patient cohorts."
-            },
-            "Section2": {
-                "Title": "Current Projects",
-                "AngioLink": "Angiosarcoma Project",
-                "BrainLink": "Brain Tumor Project",
-                "CRCLink": "Colorectal Cancer Project",
-                "ESCLink": "Esophageal and Stomach Cancer Project",
-                "LMSLink": "Leiomyosarcoma Project",
-                "MBCLink": "Metastatic Breast Cancer Project",
-                "MBCSpanishLink": "Metastatic Breast Cancer Project in Spanish",
-                "MPCLink": "Metastatic Prostate Cancer Project",
-                "OsteoLink": "Osteosarcoma Project"
-            },
-            "Section3": {
-                "Title": "Impact",
-                "Text1": "To date, more than 8,500 patients across the United States and Canada have registered to participate in Count Me In research projects, spanning several diverse cancer types. The Count Me In team would like to thank each patient who has participated.",
-                "Text2": "With this deep partnership, substantial data has been generated resulting in more than ten releases of data in scientific repositories across existing Count Me In projects.",
-                "Text3": "Scientists from around the world have used Count Me In data in order to make discoveries in many different areas and to establish new clinical trials, such as in angiosarcoma. We have heard directly from more than 60 scientists working in academic and industry settings in over ten countries who are using Count Me In data to catalyze their research.",
-                "Text4": "The results of studies utilizing Count Me In data are being widely disseminated in scientific publications, with over 50 citations of Count Me In datasets to date.",
-                "Examples": {
-                    "Title": "Here are a few examples of publications using data from Count Me In projects:",
-                    "Link1": {
-                        "Title": "Proline rich 11 (PRR11) overexpression amplifies PI3K signaling and promotes antiestrogen resistance in breast cancer.",
-                        "Source": "<i>Nature Communications.</i> 2020 Oct 30;11(1):5488."
-                    },
-                    "Link2": {
-                        "Title": "Prevalence and mutational determinants of high tumor mutation burden in breast cancer.",
-                        "Source": "<i>Annals of Oncology</i> 2020 Mar;31(3):387-394.<br/>BioRxiv 745265 [Preprint; August 2019]."
-                    },
-                    "Link3": {
-                        "Title": "The Angiosarcoma Project: enabling genomic and clinical discoveries in a rare cancer through patient-partnered research.",
-                        "Source": "<i>Nature Medicine</i> 2020 Feb;26(2):181-187.<br/>BioRxiv 741744 [Preprint; August 2019]."
-                    }
+            "Sections": [
+                {
+                    "Title": "Goals",
+                    "Paragraphs": [
+                        "Count Me In is a patient-partnered cancer research study open to anyone in the United States or Canada who has ever been diagnosed with cancer. The goal of Count Me In is to transform cancer care by enabling all cancer patients to accelerate biomedical research through sharing their cancer samples, clinical information, and their experiences. This partnership generates cancer datasets containing linked clinical, genomic, molecular, and patient-reported data without including any personal information. In order to accelerate the pace at which discoveries are made, Count Me In data is regularly shared with the biomedical research community through scientific repositories such as cBioPortal for Cancer Genomics and the National Cancer Institute (NCI) Genomic Data Commons.",
+                        "Everyone who signs up for Count Me In will be able to provide saliva samples as well as patient-reported data through a series of surveys on topics such as their clinical history, their experiences with cancer, and their family history of cancer. There is tremendous scientific value in studying this large, cross-cutting group of patients who represent many different cancer types, treating institutions, and ages or other demographics. The more that participants in research truly represent the full diversity of cancer patients and their experiences, the greater the impact that scientific discoveries can have for everyone.",
+                        "Additional biological samples, such as tumor samples, blood samples, and still samples, will be obtained from specific patient cohorts and used to generate genomic and molecular data for analysis. This resulting data will be linked to the genomic data from saliva samples, the clinical information from medical records, and patient-reported information from surveys, which will be shared with the biomedical research community. By integrating all of these different and important aspects of cancer, resulting Count Me In datasets will accelerate research discoveries across many different fields.",
+                        "This approach of Count Me In enables building and deeply studying cohorts of patients not only within one cancer type, but also that cut across cancer types -- such as all patients who receive a particular therapy, such as immunotherapy; or patients within a particular age group, such as adolescents and young adults. Count Me In has built and will continue to build research initiatives around different patient populations and cohorts. As more people join, there will be more opportunities to launch deeper studies within more patient cohorts."
+                    ]
                 },
-                "FinalText": "The collective impact of Count Me In and patient participants will continue to expand as the work of Count Me In is ongoing. There are more patient partners registering to participate every day, additional projects that will be launched, expanded datasets that will be generated and shared, and further discoveries that will be made to improve the lives of cancer patients."
-            }
+                {
+                    "Title": "Current Projects",
+                    "Links": [
+                        { "key": "Angio", "label": "Angiosarcoma Project" },
+                        { "key": "Brain", "label": "Brain Tumor Project" },
+                        { "key": "CRC", "label": "Colorectal Cancer Project" },
+                        { "key": "ESC", "label": "Esophageal and Stomach Cancer Project" },
+                        { "key": "LMS", "label": "Leiomyosarcoma Project" },
+                        { "key": "MBC", "label": "Metastatic Breast Cancer Project" },
+                        { "key": "MBCSpanish", "label": "Metastatic Breast Cancer Project in Spanish" },
+                        { "key": "MPC", "label": "Metastatic Prostate Cancer Project" },
+                        { "key": "Osteo", "label": "Osteosarcoma Project" }
+                    ]
+                },
+                {
+                    "Title": "Impact",
+                    "Paragraphs": [
+                        "To date, more than 8,500 patients across the United States and Canada have registered to participate in Count Me In research projects, spanning several diverse cancer types. The Count Me In team would like to thank each patient who has participated.",
+                        "With this deep partnership, substantial data has been generated resulting in more than ten releases of data in scientific repositories across existing Count Me In projects.",
+                        "Scientists from around the world have used Count Me In data in order to make discoveries in many different areas and to establish new clinical trials, such as in angiosarcoma. We have heard directly from more than 60 scientists working in academic and industry settings in over ten countries who are using Count Me In data to catalyze their research.",
+                        "The results of studies utilizing Count Me In data are being widely disseminated in scientific publications, with over 50 citations of Count Me In datasets to date."
+                    ],
+                    "Examples": {
+                        "Title": "Here are a few examples of publications using data from Count Me In projects:",
+                        "Links": [
+                            {
+                                "Title": "Proline rich 11 (PRR11) overexpression amplifies PI3K signaling and promotes antiestrogen resistance in breast cancer.",
+                                "Source": "<i>Nature Communications.</i> 2020 Oct 30;11(1):5488."
+                            },
+                            {
+                                "Title": "Prevalence and mutational determinants of high tumor mutation burden in breast cancer.",
+                                "Source": "<i>Annals of Oncology</i> 2020 Mar;31(3):387-394.<br/>BioRxiv 745265 [Preprint; August 2019]."
+                            },
+                            {
+                                "Title": "The Angiosarcoma Project: enabling genomic and clinical discoveries in a rare cancer through patient-partnered research.",
+                                "Source": "<i>Nature Medicine</i> 2020 Feb;26(2):181-187.<br/>BioRxiv 741744 [Preprint; August 2019]."
+                            }
+                        ]
+                    },
+                    "FinalText": "The collective impact of Count Me In and patient participants will continue to expand as the work of Count Me In is ongoing. There are more patient partners registering to participate every day, additional projects that will be launched, expanded datasets that will be generated and shared, and further discoveries that will be made to improve the lives of cancer patients."
+                }
+            ]
         },
         "AboutUs": {
             "Title": "About Us",
