Fix after review

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -160,15 +160,18 @@
                         "Links": [
                             {
                                 "Title": "Proline rich 11 (PRR11) overexpression amplifies PI3K signaling and promotes antiestrogen resistance in breast cancer.",
-                                "Source": "<i>Nature Communications.</i> 2020 Oct 30;11(1):5488."
+                                "Source": "<i>Nature Communications.</i> 2020 Oct 30;11(1):5488.",
+                                "Link": "https://www.nature.com/articles/s41467-020-19291-x"
                             },
                             {
                                 "Title": "Prevalence and mutational determinants of high tumor mutation burden in breast cancer.",
-                                "Source": "<i>Annals of Oncology</i> 2020 Mar;31(3):387-394.<br/>BioRxiv 745265 [Preprint; August 2019]."
+                                "Source": "<i>Annals of Oncology</i> 2020 Mar;31(3):387-394.<br/>BioRxiv 745265 [Preprint; August 2019].",
+                                "Link": "https://www.annalsofoncology.org/article/S0923-7534(19)40698-4/fulltext"
                             },
                             {
                                 "Title": "The Angiosarcoma Project: enabling genomic and clinical discoveries in a rare cancer through patient-partnered research.",
-                                "Source": "<i>Nature Medicine</i> 2020 Feb;26(2):181-187.<br/>BioRxiv 741744 [Preprint; August 2019]."
+                                "Source": "<i>Nature Medicine</i> 2020 Feb;26(2):181-187.<br/>BioRxiv 741744 [Preprint; August 2019].",
+                                "Link": "https://www.nature.com/articles/s41591-019-0749-z.epdf?author_access_token=cBBx7BAXQ6Z3D-FtgKtMatRgN0jAjWel9jnR3ZoTv0OuyqpOiBwU8Z8ASb5NY9IbXk1V1KF_R5v6TTbcRFo-JeMJ0-VLX-DiOKjqfH1Idg9OXZftog_CeSSuTvzZX78hU5-xKsQ6XRMok9B76DOedQ%3D%3D"
                             }
                         ]
                     },
