DDP-6284 set saved value, validation, some tests

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -613,7 +613,8 @@
         },
         "TooltipAlt": "Information",
         "Validators": {
-            "DateNavyValidationRule": "Entered date is invalid"
+            "DateNavyValidationRule": "Entered date is invalid",
+            "Autocomplete": "No {{text}} is found"
         },
         "SubjectPanel": {
             "Link": "Return to subject look-up",
