--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -627,7 +627,7 @@
         "TooltipAlt": "Information",
         "Validators": {
             "DateNavyValidationRule": "Entered date is invalid",
-            "Autocomplete": "No {{text}} is found"
+            "Autocomplete": "No {{control}} is found"
         },
         "SubjectPanel": {
             "Link": "Return to subject look-up",
