Add missed translations for modal dialog (ddp-rgp)

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1434,6 +1434,9 @@
         },
         "Validators": {
             "DateNavyValidationRule": "Entered date is invalid"
-        }
+        },
+        "ConfirmDeletion": "Are you sure you want to delete \nthis information?",
+        "DeleteButton": "Delete",
+        "CancelBtn": "Cancel"
     }
 }
