--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1285,6 +1285,9 @@
         },
         "Validators": {
             "DateNavyValidationRule": "[es]Entered date is invalid"
-        }
+        },
+        "ConfirmDeletion": "[es]Are you sure you want to delete \nthis information?",
+        "DeleteButton": "[es]Delete",
+        "CancelBtn": "[es]Cancel"
     }
 }
