DDP-6284 autocomplete picklist (#679)
* DDP-6284 autocomplete picklist

* DDP-6284 fix comments

* DDP-6284 set saved value, validation, some tests

* DDP-6284 fix console error

* DDP-6284 add validation rule

* DDP-6284 add validation rule message translation params

* DDP-6284 fix build

* DDP-6284 move customVersionId to block instance, unit tests

* DDP-6284 unit tests

* DDP-6284 width -> full-width

* DDP-6284 validator simplifying + unit tests

* DDP-6284 fix filter algorithm

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -626,7 +626,8 @@
         },
         "TooltipAlt": "Information",
         "Validators": {
-            "DateNavyValidationRule": "Entered date is invalid"
+            "DateNavyValidationRule": "Entered date is invalid",
+            "Autocomplete": "No {{control}} is found"
         },
         "SubjectPanel": {
             "Link": "Return to subject look-up",
