--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -315,6 +315,7 @@
     "Title": "Participant Dashboard",
     "NewParticipant": "New Participant",
     "NoParticipants": "You don't have any participants at this moment. You can add one by clicking the button below.",
+    "HelpTip": "Please select Participant by clicking his/her name in the list below.",
     "DeleteError": "This participant has already consented and can’t be deleted here. If you wish to withdraw consent, please contact Rare-X study personnel directly."
   },
   "ParticipantDeletionDialog": {
