Rare-X / RefId-97: Display current participant name & open participant activities upon return to dashboard

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -12,6 +12,9 @@
       "PoweredBy": "Powered by RARE-X"
     }
   },
+  "TopBar": {
+    "SelectedParticipant": "Selected Participant: {{ participantName }}"
+  },
   "Footer": {
     "Links": {
       "Home": "RARE-X.org",
