DDP-6472 add dashboard button to pancan, adjust styles

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -353,7 +353,8 @@
             "Participation": "Participation",
             "ScientificResearch": "Scientific Research",
             "FAQ": "FAQ",
-            "Join": "Join"
+            "Join": "Join",
+            "Dashboard": "Dashboard"
         },
         "Footer": {
             "BackToTopButton": "Back to top",
