DDP-6573 Fixed buttons issue

--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -434,7 +434,7 @@
     "Title": "Your Letters  of Request for Release of Your Clinical and Genetic Information",
     "ActivityName": "Provider/Clinic",
     "DateCreated": "Date Create",
-    "GenerateReleaseRequestGenetic": "Generate Clinical Request",
-    "ReleaseRequestClinical": "Generate Genetic Request"
+    "GenerateReleaseRequestGenetic": "Generate Genetic Request",
+    "ReleaseRequestClinical": "Generate Clinical Request"
   }
 }
